@@ -134,10 +134,10 @@ typedef struct salloc_options {
 	char *network;		/* --network=			*/
 
 	/* BLUEGENE SPECIFIC */
-	uint16_t geometry[SYSTEM_DIMENSIONS]; /* --geometry, -g	*/
+	uint16_t geometry[HIGHEST_DIMENSIONS]; /* --geometry, -g */
 	bool reboot;		/* --reboot			*/
 	bool no_rotate;		/* --no_rotate, -R		*/
-	uint16_t conn_type;	/* --conn-type 			*/
+	uint16_t conn_type[HIGHEST_DIMENSIONS];	/* --conn-type 	*/
 	char *blrtsimage;       /* --blrts-image BlrtsImage for block */
 	char *linuximage;       /* --linux-image LinuxImage for block */
 	char *mloaderimage;     /* --mloader-image mloaderImage for block */
